[package]
name = "flake_growth"
version = "0.40.0"
authors = ["René Kullock"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


include = [
    "src/*.rs",
    "src/**/*.rs"
]

[dependencies]
kiss3d = "0.24.1"
nalgebra = "0.21.0"
ndarray = "0.13.1"
stdweb = "0.4.20"
rand = { version = "0.7", features = [ "stdweb" ] }
# rand = { version = "0.7.3", features = [ "small_rng" ] }      # small_rng should be faster but wasn't
separator = "0.4.1"
csv = "1.1.3"
instant = "0.1"                                                 # needed for getting the timing also to work for wasm

# lto does not improve the performance
# [profile.release]         # Modify profile settings via config.
# lto = true                # Sets link-time optimization.
