[package]
name = "flake_growth"
version = "0.50.0"
authors = ["René Kullock"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


include = [
    "src/*.rs",
    "src/**/*.rs"
]

[features]
default = ["sidebar"]
sidebar = ["kiss3d/conrod"]

[dependencies]
kiss3d = "0.24"
nalgebra = "0.21"
ndarray = "0.14"
stdweb = "0.4"
rand = { version = "0.7", features = [ "stdweb" ] }
# rand = { version = "0.7.3", features = [ "small_rng" ] }      # small_rng should be faster but wasn't
separator = "0.4"
csv = "1.1"
instant = "0.1"                                                 # needed for getting the timing also to work for wasm

# lto does not improve the performance
# [profile.release]         # Modify profile settings via config.
# lto = true                # Sets link-time optimization.
